# ModernCPPSeed

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
Batches/: CMakeLists.txt
Batches/Batch1/: Batch1Main.cpp  CMakeLists.txt
Batches/Batch2/: CMakeLists.txt
Batches/Batch3/: CMakeLists.txt
Batches/Batch4/: CMakeLists.txt
Batches/Batch4/test/: Batch4_TestMain.cpp  CMakeLists.txt
Batches/Batch5/: Batch5Main.cpp  CMakeLists.txt
Batches/Batch6/: CMakeLists.txt
Batches/Batch7/: Batch7Main.cpp  CMakeLists.txt
Batches/Batch8/: CMakeLists.txt
CMake/: CompilerWarnings.cmake  ConanConfig.cmake  CopyRessources.cmake  GlobalCompileOption.cmake  GlobalCompileWarnings.cmake  GlobalOptions.cmake  Utils.cmake
CMake/ConanConfig/: conanfile.py  conanfile.txt
CMake/ConanConfig/ConanRecipe/: conanfile.py
Executables/: CMakeLists.txt
Executables/Executable1/: CMakeLists.txt
Executables/Executable2/: CMakeLists.txt
Executables/Executable3/: CMakeLists.txt  Executable3Main.cpp
Executables/Executable4/: CMakeLists.txt
Executables/Executable4/test/: CMakeLists.txt  Executable4_TestMain.cpp
Executables/Executable5/: CMakeLists.txt
Executables/Executable6/: CMakeLists.txt
Executables/Executable7/: CMakeLists.txt
Executables/Executable8/: CMakeLists.txt  Executable8Main.cpp
Libraries/: CMakeLists.txt
Libraries/libBatch/: CMakeLists.txt  ofBatch.cpp
Libraries/libExecutable/: CMakeLists.txt  ofExecutable.h
Libraries/libofHotload/: CMakeLists.txt  ofHotLoad.cpp  ofHotLoad.h
Libraries/lowLevel/: CMakeLists.txt
Libraries/lowLevel/libFile/: CMakeLists.txt
Libraries/lowLevel/libHeaderOnly/: CMakeLists.txt
Libraries/lowLevel/libInput/: CMakeLists.txt  ofInput.cpp  ofInput.h
Tools/Builders/: LinBuild.sh  LinBuild_and_Install.sh  WinBuild.bat  WinBuild_and_install.bat  WinBuild_runTests.bat  WinBuild_runTests_and_install.bat  build.bat  build_and_install.bat  build_runTests_and_install.bat
