project (ofInput CXX)

set( sources
		ofInput.cpp
	)
set( headers
		ofInput.h
	)
	
set(${PROJECT_NAME}_BUILD_STATIC_LIB ON)

set(${PROJECT_NAME}_ENABLE_UNIT_TESTING OFF)


#if not set, each of these will use the globals option in /CMake/GlobalOptions
if(MSVC)
set(${PROJECT_NAME}_COMPILER_DEFINITION "")
set(${PROJECT_NAME}_COMPILER_DEBUG_DEFINITION "")
set(${PROJECT_NAME}_COMPILER_RELEASE_DEFINITION "")
set(${PROJECT_NAME}_COMPILER_OPTIONS "")
set(${PROJECT_NAME}_COMPILER_DEBUG_OPTIONS "")
set(${PROJECT_NAME}_COMPILER_RELEASE_OPTIONS "")
set(${PROJECT_NAME}_LINKER_OPTIONS "")
set(${PROJECT_NAME}_LINKER_DEBUG_OPTIONS "")
set(${PROJECT_NAME}_LINKER_RELEASE_OPTIONS "")
else()
set(${PROJECT_NAME}_COMPILER_DEFINITION "")
set(${PROJECT_NAME}_COMPILER_DEBUG_DEFINITION "")
set(${PROJECT_NAME}_COMPILER_RELEASE_DEFINITION "")
set(${PROJECT_NAME}_COMPILER_OPTIONS "")
set(${PROJECT_NAME}_COMPILER_DEBUG_OPTIONS "")
set(${PROJECT_NAME}_COMPILER_RELEASE_OPTIONS "")
set(${PROJECT_NAME}_LINKER_OPTIONS "")
set(${PROJECT_NAME}_LINKER_DEBUG_OPTIONS "")
set(${PROJECT_NAME}_LINKER_RELEASE_OPTIONS "")
endif()


set(${PROJECT_NAME}_LINKER_DEPENDECY "ofFile")


manage_targetOptions(${PROJECT_NAME} ${headers} ${sources})

#you can still now do things like :
#target_link_libraries(${PROJECT_NAME} PUBLIC CONAN_PKG::Thot)
