project (ofInput CXX)

set( ${PROJECT_NAME}_SOURCES
		ofInput.cpp
	)
set( ${PROJECT_NAME}_PUBLIC_HEADERS
		ofInput.h
	)
	
set(${PROJECT_NAME}_BUILD_STATIC_LIB ON)

set(${PROJECT_NAME}_ENABLE_UNIT_TESTING OFF)


#You can also add your own compiler/linker option and definition
if(MSVC)
set(${PROJECT_NAME}_COMPILER_DEFINITION "")
set(${PROJECT_NAME}_COMPILER_DEFINITION_DEBUG "")
set(${PROJECT_NAME}_COMPILER_DEFINITION_RELEASE "")
set(${PROJECT_NAME}_COMPILER_OPTIONS "")
set(${PROJECT_NAME}_COMPILER_OPTIONS_DEBUG "")
set(${PROJECT_NAME}_COMPILER_OPTIONS_RELEASE "")
set(${PROJECT_NAME}_LINKER_OPTIONS "")
set(${PROJECT_NAME}_LINKER_OPTIONS_DEBUG "")
set(${PROJECT_NAME}_LINKER_OPTIONS_RELEASE "")
elseif(CMAKE_CXX_COMPILER_ID MATCHES ".*Clang" AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")

elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")

endif()


set(${PROJECT_NAME}_LINKER_DEPENDECY)
manage_target_options(${PROJECT_NAME}  )

#you can still now do things like :
#target_link_libraries(${PROJECT_NAME} PUBLIC CONAN_PKG::Thot)
